# onchain-appattest

./: .gitignore  .gitmodules  README.md
appattest-circuits/: .gitignore
appattest-circuits/lib/: Cargo.toml
appattest-circuits/lib/src/: lib.rs
appattest-circuits/program/: Cargo.toml
appattest-circuits/program/elf/: riscv32im-succinct-zkvm-elf
appattest-circuits/program/src/: assertion.rs  attestation.rs  constants.rs  decode.rs  main.rs  output.txt  test.pem
appattest-circuits/program/src/assertion/: assertion.rs  assertion_test.rs
appattest-circuits/script/: Cargo.toml
appattest-circuits/script/src/: main.rs
contracts/: README.md  foundry.toml
contracts/cache/: solidity-files-cache.json
contracts/src/: P256Account.sol  SimpleAccount.sol
contracts/src/callback/: TokenCallbackHandler.sol
contracts/src/core/: BasePaymaster.sol  EntryPoint.sol
contracts/test/: P256.Account.t.sol
proving-server/: Cargo.toml
proving-server/src/: main.rs
