[workspace]
[package]
version = "0.1.0"
name = "appattest-circuits-program"
edition = "2021"

[dependencies]
sp1-zkvm = { git = "https://github.com/succinctlabs/sp1.git" }
lib = { path = "../lib" }
base64-url = "3.0.0"
serde_cbor = "0.10"
serde = { version = "1.0.200", features = ["derive"] }
serde_derive = "1.0.200"
serde_json = "1.0.116"
sha2 = "0.10.8"
p256 = "0.13.2"
hex = "0.4.3"
base64 = "0.22.1"
bcder = "0.7.4"
bytes = "1.5.0"
der-parser = "9.0.0"
x509-verify = { version = "0.4.5", features = ["p256", "p384", "x509", "pem"] }
x509-cert = "0.2.5"

[patch.crates-io]
sha2-v0-10-8 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", branch = "patch-v0.10.8" }
